DIAC-855 am roles (#1378)
* adding role assignment service for am roles to work in place of soon to be deprecated idam backwards compatible roles

* fix

* dependency fix

* checsktyle fix

* checsktyle fix

* fix to FeignConfiguration

* fix to FeignConfiguration

* fix to FeignConfiguration

* Bumping chart version/ fixing aliases

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>