@@ -3,10 +3,17 @@ package uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.homeof
 import static java.util.Objects.requireNonNull;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCaseDefinition.ARIA_LISTING_REFERENCE;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCaseDefinition.CURRENT_CASE_STATE_VISIBLE_TO_HOME_OFFICE_ALL;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.CITIZEN;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.HOME_OFFICE_APC;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.HOME_OFFICE_GENERIC;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.HOME_OFFICE_LART;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.HOME_OFFICE_POU;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.LEGAL_REPRESENTATIVE;
+import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole.getAdminOfficerRoles;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.utils.AsylumCaseUtils.isAcceleratedDetainedAppeal;
 
 import com.google.common.collect.ImmutableMap;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -18,6 +25,7 @@ import uk.gov.hmcts.reform.iacasenotificationsapi.domain.UserDetailsProvider;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCaseDefinition;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.MakeAnApplication;
+import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserRole;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.ccd.State;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.EmailNotificationPersonalisation;
 import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.AppealService;
@@ -29,16 +37,6 @@ import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.MakeAnApplicati
 @Slf4j
 @Service
 public class HomeOfficeMakeAnApplicationPersonalisation implements EmailNotificationPersonalisation {
-
-    private static final String HOME_OFFICE_RESPONDENT_OFFICER = "caseworker-ia-respondentofficer";
-    private static final String ROLE_LEGAL_REP = "caseworker-ia-legalrep-solicitor";
-    private static final String HOME_OFFICE_LART = "caseworker-ia-homeofficelart";
-    private static final String HOME_OFFICE_APC = "caseworker-ia-homeofficeapc";
-    private static final String HOME_OFFICE_POU = "caseworker-ia-homeofficepou";
-    private static final String ADMIN_OFFICER = "caseworker-ia-admofficer";
-    private static final String CITIZEN = "citizen";
-
-
     private final String homeOfficeMakeAnApplicationBeforeListingTemplateId;
     private final String homeOfficeMakeAnApplicationAfterListingTemplateId;
     private final String homeOfficeMakeAnApplicationOtherPartyBeforeListingTemplateId;
@@ -58,18 +56,18 @@ public class HomeOfficeMakeAnApplicationPersonalisation implements EmailNotifica
     private String nonAdaPrefix;
 
     public HomeOfficeMakeAnApplicationPersonalisation(
-            @Value("${govnotify.template.makeAnApplication.beforeListing.homeOffice.email}") String homeOfficeMakeAnApplicationBeforeListingTemplateId,
-            @Value("${govnotify.template.makeAnApplication.afterListing.homeOffice.email}") String homeOfficeMakeAnApplicationAfterListingTemplateId,
-            @Value("${govnotify.template.makeAnApplication.beforeListing.otherParty.homeOffice.email}") String homeOfficeMakeAnApplicationOtherPartyBeforeListingTemplateId,
-            @Value("${govnotify.template.makeAnApplication.afterListing.otherParty.homeOffice.email}") String homeOfficeMakeAnApplicationOtherPartyAfterListingTemplateId,
-            @Value("${apcHomeOfficeEmailAddress}") String apcHomeOfficeEmailAddress,
-            @Value("${lartHomeOfficeEmailAddress}") String lartHomeOfficeEmailAddress,
-            @Value("${iaExUiFrontendUrl}") String iaExUiFrontendUrl,
-            CustomerServicesProvider customerServicesProvider,
-            AppealService appealService,
-            UserDetailsProvider userDetailsProvider,
-            EmailAddressFinder emailAddressFinder,
-            MakeAnApplicationService makeAnApplicationService
+        @Value("${govnotify.template.makeAnApplication.beforeListing.homeOffice.email}") String homeOfficeMakeAnApplicationBeforeListingTemplateId,
+        @Value("${govnotify.template.makeAnApplication.afterListing.homeOffice.email}") String homeOfficeMakeAnApplicationAfterListingTemplateId,
+        @Value("${govnotify.template.makeAnApplication.beforeListing.otherParty.homeOffice.email}") String homeOfficeMakeAnApplicationOtherPartyBeforeListingTemplateId,
+        @Value("${govnotify.template.makeAnApplication.afterListing.otherParty.homeOffice.email}") String homeOfficeMakeAnApplicationOtherPartyAfterListingTemplateId,
+        @Value("${apcHomeOfficeEmailAddress}") String apcHomeOfficeEmailAddress,
+        @Value("${lartHomeOfficeEmailAddress}") String lartHomeOfficeEmailAddress,
+        @Value("${iaExUiFrontendUrl}") String iaExUiFrontendUrl,
+        CustomerServicesProvider customerServicesProvider,
+        AppealService appealService,
+        UserDetailsProvider userDetailsProvider,
+        EmailAddressFinder emailAddressFinder,
+        MakeAnApplicationService makeAnApplicationService
     ) {
         this.homeOfficeMakeAnApplicationBeforeListingTemplateId = homeOfficeMakeAnApplicationBeforeListingTemplateId;
         this.homeOfficeMakeAnApplicationAfterListingTemplateId = homeOfficeMakeAnApplicationAfterListingTemplateId;
@@ -88,10 +86,10 @@ public class HomeOfficeMakeAnApplicationPersonalisation implements EmailNotifica
     @Override
     public String getTemplateId(AsylumCase asylumCase) {
         boolean isAppealListed = appealService.isAppealListed(asylumCase);
-        boolean isHomeOfficeUser = hasRoles(Arrays.asList(HOME_OFFICE_APC,
-                                 HOME_OFFICE_LART,
-                                HOME_OFFICE_POU,
-                                HOME_OFFICE_RESPONDENT_OFFICER));
+        boolean isHomeOfficeUser = hasRoles(List.of(HOME_OFFICE_APC,
+            HOME_OFFICE_LART,
+            HOME_OFFICE_POU,
+            HOME_OFFICE_GENERIC));
 
         if (isAppealListed) {
             return isHomeOfficeUser ? homeOfficeMakeAnApplicationAfterListingTemplateId : homeOfficeMakeAnApplicationOtherPartyAfterListingTemplateId;
@@ -104,30 +102,29 @@ public class HomeOfficeMakeAnApplicationPersonalisation implements EmailNotifica
     public Set<String> getRecipientsList(AsylumCase asylumCase) {
 
         State currentState = asylumCase.read(CURRENT_CASE_STATE_VISIBLE_TO_HOME_OFFICE_ALL, State.class)
-                .orElse(null);
+            .orElse(null);
 
         if (currentState == null) {
             return Collections.emptySet();
         }
 
-        boolean hasValidRoles = hasRoles(Arrays.asList(
-            ROLE_LEGAL_REP,
+        ArrayList<UserRole> validRoles = new ArrayList<>(List.of(
+            LEGAL_REPRESENTATIVE,
             CITIZEN,
-            HOME_OFFICE_RESPONDENT_OFFICER,
-            ADMIN_OFFICER));
-
-        if (hasRoles(Arrays.asList(HOME_OFFICE_APC))
-                || (hasValidRoles && isValidStateForHomeOfficeApc(currentState))) {
+            HOME_OFFICE_GENERIC));
+        validRoles.addAll(getAdminOfficerRoles());
+        if (hasRole(HOME_OFFICE_APC)
+            || (hasRoles(validRoles) && isValidStateForHomeOfficeApc(currentState))) {
             return Collections.singleton(apcHomeOfficeEmailAddress);
-        } else if (hasRoles(Arrays.asList(HOME_OFFICE_LART))
-                || (hasValidRoles && isValidStateForHomeOfficeLart(currentState))) {
+        } else if (hasRole(HOME_OFFICE_LART)
+            || (hasRoles(validRoles) && isValidStateForHomeOfficeLart(currentState))) {
             return Collections.singleton(lartHomeOfficeEmailAddress);
-        } else if (hasRoles(Arrays.asList(HOME_OFFICE_POU))
-                || (hasValidRoles && (isValidStateForHomeOfficePou(currentState)))) {
+        } else if (hasRole(HOME_OFFICE_POU)
+            || (hasRoles(validRoles) && (isValidStateForHomeOfficePou(currentState)))) {
             if (appealService.isAppealListed(asylumCase)) {
                 return Collections.singleton(emailAddressFinder.getListCaseHomeOfficeEmailAddress(asylumCase));
             } else {
-                return  Collections.singleton(emailAddressFinder.getHomeOfficeEmailAddress(asylumCase));
+                return Collections.singleton(emailAddressFinder.getHomeOfficeEmailAddress(asylumCase));
             }
         } else {
             throw new IllegalStateException("homeOffice email Address cannot be found");
@@ -144,56 +141,66 @@ public class HomeOfficeMakeAnApplicationPersonalisation implements EmailNotifica
         requireNonNull(asylumCase, "asylumCase must not be null");
 
         return ImmutableMap
-                .<String, String>builder()
-                .putAll(customerServicesProvider.getCustomerServicesPersonalisation())
-                .put("subjectPrefix", isAcceleratedDetainedAppeal(asylumCase) ? adaPrefix : nonAdaPrefix)
-                .put("appealReferenceNumber", asylumCase.read(AsylumCaseDefinition.APPEAL_REFERENCE_NUMBER, String.class).orElse(""))
-                .put("ariaListingReference", asylumCase.read(ARIA_LISTING_REFERENCE, String.class).orElse(""))
-                .put("homeOfficeReferenceNumber", asylumCase.read(AsylumCaseDefinition.HOME_OFFICE_REFERENCE_NUMBER, String.class).orElse(""))
-                .put("appellantGivenNames", asylumCase.read(AsylumCaseDefinition.APPELLANT_GIVEN_NAMES, String.class).orElse(""))
-                .put("appellantFamilyName", asylumCase.read(AsylumCaseDefinition.APPELLANT_FAMILY_NAME, String.class).orElse(""))
-                .put("applicationType", makeAnApplicationService.getMakeAnApplication(asylumCase, false).map(MakeAnApplication::getType).orElse(""))
-                .put("linkToOnlineService", iaExUiFrontendUrl)
-                .build();
+            .<String, String>builder()
+            .putAll(customerServicesProvider.getCustomerServicesPersonalisation())
+            .put("subjectPrefix", isAcceleratedDetainedAppeal(asylumCase) ? adaPrefix : nonAdaPrefix)
+            .put("appealReferenceNumber", asylumCase.read(AsylumCaseDefinition.APPEAL_REFERENCE_NUMBER, String.class).orElse(""))
+            .put("ariaListingReference", asylumCase.read(ARIA_LISTING_REFERENCE, String.class).orElse(""))
+            .put("homeOfficeReferenceNumber", asylumCase.read(AsylumCaseDefinition.HOME_OFFICE_REFERENCE_NUMBER, String.class).orElse(""))
+            .put("appellantGivenNames", asylumCase.read(AsylumCaseDefinition.APPELLANT_GIVEN_NAMES, String.class).orElse(""))
+            .put("appellantFamilyName", asylumCase.read(AsylumCaseDefinition.APPELLANT_FAMILY_NAME, String.class).orElse(""))
+            .put("applicationType", makeAnApplicationService.getMakeAnApplication(asylumCase, false).map(MakeAnApplication::getType).orElse(""))
+            .put("linkToOnlineService", iaExUiFrontendUrl)
+            .build();
     }
 
-    private boolean hasRoles(List<String> roles) {
+    private boolean hasRoles(List<UserRole> roles) {
+        List<String> rawRoles = roles.stream()
+            .map(UserRole::toString)
+            .toList();
         return userDetailsProvider
-                .getUserDetails()
-                .getRoles()
-                .stream()
-                .anyMatch(r -> roles.contains(r));
+            .getUserDetails()
+            .getRoles()
+            .stream()
+            .anyMatch(rawRoles::contains);
+    }
+
+    private boolean hasRole(UserRole role) {
+        return userDetailsProvider
+            .getUserDetails()
+            .getRoles()
+            .contains(role.toString());
     }
 
     private boolean isValidStateForHomeOfficeApc(State currentState) {
-        return Arrays.asList(State.APPEAL_SUBMITTED,
-                State.PENDING_PAYMENT,
-                State.AWAITING_RESPONDENT_EVIDENCE,
-                State.CASE_BUILDING,
-                State.REASONS_FOR_APPEAL_SUBMITTED,
-                State.AWAITING_REASONS_FOR_APPEAL,
-                State.AWAITING_CLARIFYING_QUESTIONS_ANSWERS,
-                State.CASE_UNDER_REVIEW,
-                State.ENDED
+        return List.of(State.APPEAL_SUBMITTED,
+            State.PENDING_PAYMENT,
+            State.AWAITING_RESPONDENT_EVIDENCE,
+            State.CASE_BUILDING,
+            State.REASONS_FOR_APPEAL_SUBMITTED,
+            State.AWAITING_REASONS_FOR_APPEAL,
+            State.AWAITING_CLARIFYING_QUESTIONS_ANSWERS,
+            State.CASE_UNDER_REVIEW,
+            State.ENDED
         ).contains(currentState);
     }
 
     private boolean isValidStateForHomeOfficeLart(State currentState) {
-        return Arrays.asList(State.RESPONDENT_REVIEW,
-                State.LISTING,
-                State.SUBMIT_HEARING_REQUIREMENTS).contains(currentState);
+        return List.of(State.RESPONDENT_REVIEW,
+            State.LISTING,
+            State.SUBMIT_HEARING_REQUIREMENTS).contains(currentState);
     }
 
     private boolean isValidStateForHomeOfficePou(State currentState) {
-        return Arrays.asList(State.ADJOURNED,
-                State.PREPARE_FOR_HEARING,
-                State.FINAL_BUNDLING,
-                State.PRE_HEARING,
-                State.DECISION,
-                State.DECIDED,
-                State.FTPA_SUBMITTED,
-                State.FTPA_DECIDED,
-                State.REMITTED
+        return List.of(State.ADJOURNED,
+            State.PREPARE_FOR_HEARING,
+            State.FINAL_BUNDLING,
+            State.PRE_HEARING,
+            State.DECISION,
+            State.DECIDED,
+            State.FTPA_SUBMITTED,
+            State.FTPA_DECIDED,
+            State.REMITTED
         ).contains(currentState);
     }
 }
