@@ -17,7 +17,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.UserDetails;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.service.IdamService;
-import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.clients.IdamApi;
 import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.clients.model.idam.UserInfo;
 import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.security.AccessTokenProvider;
 
@@ -26,8 +25,6 @@ public class IdamUserDetailsProviderTest {
 
     @Mock
     private AccessTokenProvider accessTokenProvider;
-    @Mock
-    private IdamApi idamApi;
     @Mock
     private IdamService idamService;
     private IdamUserDetailsProvider idamUserDetailsProvider;
@@ -38,7 +35,6 @@ public class IdamUserDetailsProviderTest {
         idamUserDetailsProvider =
             new IdamUserDetailsProvider(
                 accessTokenProvider,
-                idamApi,
                 idamService
             );
     }
@@ -87,7 +83,7 @@ public class IdamUserDetailsProviderTest {
         UserInfo userInfo = new UserInfo(
             "john.doe@example.com",
             null,
-            Arrays.asList("role"),
+            List.of("role"),
             "John Doe",
             "John",
             "Doe"
@@ -133,7 +129,7 @@ public class IdamUserDetailsProviderTest {
         UserInfo userInfo = new UserInfo(
             null,
             "some-id",
-            Arrays.asList("role"),
+            List.of("role"),
             "John Doe",
             "John",
             "Doe"
@@ -156,7 +152,7 @@ public class IdamUserDetailsProviderTest {
         UserInfo userInfo = new UserInfo(
             "john.doe@example.com",
             "some-id",
-            Arrays.asList("role"),
+            List.of("role"),
             "John Doe",
             null,
             "Doe"
@@ -179,7 +175,7 @@ public class IdamUserDetailsProviderTest {
         UserInfo userInfo = new UserInfo(
             "john.doe@example.com",
             "some-id",
-            Arrays.asList("role"),
+            List.of("role"),
             "John Doe",
             "John",
             null
